--- a/modelo.html
+++ b/modelo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Verificador de Idade</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="./ex015/estilo.css">
 </head>
 <body>
     <header>
@@ -32,6 +32,6 @@
     <footer>
         <p>&copy;CursoemVídeo</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="./ex015/script.js"></script>
 </body>
 </html>
